--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
-        "ext-http": "*",
+        "php": "8.1.* || ^8.3",
         "barryvdh/laravel-dompdf": "^2.1",
         "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^10.10",
