--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "8.1 || ^8.4",
+        "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.1",
+        "dedoc/scramble": "^0.12.10",
         "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
